[project]
name = "ruby-commit-helper"
version = "2025.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich>=13.9.4"]

[tool.uv]
dev-dependencies = [
    "build>=1.2.2.post1",
    "twine>=5.1.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ruby-commit-helper = "ruby_commit_helper.main:main"
