[project]
name = "ruby-commit-helper"
version = "2025.4.3.1"
description = "No more \"offend\" for your ruby commit!"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich>=13.9.4"]

[tool.uv]
dev-dependencies = ["build>=1.2.2.post1", "twine>=5.1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["ruby_commit_helper"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["ruby_commit_helper"]

[project.scripts]
ruby-commit-helper = "ruby_commit_helper.main:check_style"
